@startuml
!include ../style.puml
skinparam arrowThickness 1.1
skinparam classAttributeIconSize 0
hide circle

package "Command Component" {

    class CommandRunner {
    }

    class SKUCommandHandler {
    }

    class TaskCommandHandler {
    }

    class ViewCommandHandler {
    }

    class ParsedCommand {
    }

    class CommandHelper <<utility>> {
    }

    class DateValidator <<utility>> {
    }

    CommandRunner "1" *--> "1" SKUCommandHandler : delegates to
    CommandRunner "1" *--> "1" TaskCommandHandler : delegates to
    CommandRunner "1" *--> "1" ViewCommandHandler : delegates to

    CommandRunner ..> ParsedCommand : dispatches

    SKUCommandHandler ..> ParsedCommand : reads
    TaskCommandHandler ..> ParsedCommand : reads
    ViewCommandHandler ..> ParsedCommand : reads

    SKUCommandHandler ..> CommandHelper : uses
    TaskCommandHandler ..> CommandHelper : uses
    ViewCommandHandler ..> CommandHelper : uses

    TaskCommandHandler ..> DateValidator : uses
    SKUCommandHandler ..> DateValidator : uses

}

CommandRunner -[hidden]down- SKUCommandHandler
SKUCommandHandler -[hidden]right- TaskCommandHandler
TaskCommandHandler -[hidden]right- ViewCommandHandler
CommandHelper -[hidden]right- DateValidator
ParsedCommand -[hidden]down- CommandHelper

@enduml
